statefulset.yaml

---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mistral-7b
  namespace: default
  labels:
    app: mistral-7b
spec:
  serviceName: "mistral-7b-headless"
  replicas: 3  # Una por cada GPU
  selector:
    matchLabels:
      app: mistral-7b
  template:
    metadata:
      labels:
        app: mistral-7b
    spec:
      volumes:
      - name: shm
        emptyDir:
          medium: Memory
          sizeLimit: "1Gi"
      containers:
      - name: mistral-7b
        image: vllm/vllm-openai:latest
        imagePullPolicy: IfNotPresent
        command: ["/bin/sh", "-c"]
        args: [
          "mkdir -p /root/.cache/huggingface && chmod 777 /root/.cache/huggingface && export HF_HUB_ENABLE_HF_TRANSFER=0 && vllm serve TheBloke/Mistral-7B-Instruct-v0.2-GPTQ --quantization gptq --dtype float16 --gpu-memory-utilization 0.7 --max-model-len 1024"
        ]
        ports:
        - containerPort: 8000
          name: http
        resources:
          limits:
            cpu: "4"
            memory: "6G"
            nvidia.com/gpu: "1"
          requests:
            cpu: "2"
            memory: "4G"
            nvidia.com/gpu: "1"
        volumeMounts:
        - mountPath: /root/.cache/huggingface
          name: cache-volume
        - name: shm
          mountPath: /dev/shm
        readinessProbe:
          httpGet:
            path: /health
            port: 8000
          initialDelaySeconds: 300
          periodSeconds: 30
          timeoutSeconds: 15
          failureThreshold: 10
        livenessProbe:
          httpGet:
            path: /health
            port: 8000
          initialDelaySeconds: 300
          periodSeconds: 30
          timeoutSeconds: 15
  volumeClaimTemplates:
  - metadata:
      name: cache-volume
    spec:
      accessModes: [ "ReadWriteOnce" ]
      # storageClassName: "standard"  # Especifica tu clase de almacenamiento
      resources:
        requests:
          storage: 10Gi
